RESOLVED FIXED258649
Crash in TextManipulationController::observeParagraphs on macrumors.com
https://bugs.webkit.org/show_bug.cgi?id=258649
Summary Crash in TextManipulationController::observeParagraphs on macrumors.com
Ryosuke Niwa
Reported 2023-06-28 16:37:36 PDT
e.g. Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebCore 0x715b5b0bd WebCore::TextManipulationController::observeParagraphs(WebCore::Position const&, WebCore::Position const&) + 253 1 WebCore 0x715b5bfca WebCore::TextManipulationController::observeParagraphs(WebCore::Position const&, WebCore::Position const&) + 4106 2 WebCore 0x715b5bfca WebCore::TextManipulationController::observeParagraphs(WebCore::Position const&, WebCore::Position const&) + 4106 3 WebCore 0x715b6bda1 WTF::Detail::CallableWrapper<WebCore::TextManipulationController::scheduleObservationUpdate()::$_7, void>::call() + 2497 4 WebCore 0x715a190ea WebCore::EventLoop::run() + 154 5 WebCore 0x715a9db96 WebCore::WindowEventLoop::didReachTimeToRun() + 22 6 WebCore 0x716191df8 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() + 152 7 WebCore 0x7143809bf WebCore::timerFired(__CFRunLoopTimer*, void*) + 31 <rdar://85597139>
Attachments
Ryosuke Niwa
Comment 1 2023-06-28 16:41:03 PDT
EWS
Comment 2 2023-06-28 23:05:23 PDT
Committed 265612@main (3f0a2a47e444): <https://commits.webkit.org/265612@main> Reviewed commits have been landed. Closing PR #15386 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.