Cherry-pick 3f0a2a47e444. rdar://problem/85597139

Crash in TextManipulationController::observeParagraphs on macrumors.com
    https://bugs.webkit.org/show_bug.cgi?id=258649

    Reviewed by Wenson Hsieh.

    In some cases, we can reach the end of shadow root without TextIterator hitting the end.
    We need to stop the iteration in such cases to avoid dereferencing nullptr.

    Unfortunately no new tests since I cannot create a reduction.

    * Source/WebCore/editing/TextManipulationController.cpp:
    (WebCore::ParagraphContentIterator::atEnd const):

    Canonical link: https://commits.webkit.org/265612@main

Identifier: 263823.1686@safari-7616.1.21-branch